--- a/quispe_josue_tallerweb/clase 3/Navbar/servicios.html
+++ b/quispe_josue_tallerweb/clase 3/Navbar/servicios.html
@@ -10,7 +10,7 @@
   <nav class="navbar">
         <div class="navbar-logo">mi sitio</div>
         <ul class="navbar-links">
-            <li><a href="../mascota.html">principal</a></li>
+            <li><a href="../index.html">principal</a></li>
             <li><a href="inicio.html">inicio</a></li>
             <li><a href="servicios.html">servicios</a></li>
             <li><a href="nosotros.html">nosotros</a></li>
