--- a/quispe_josue_tallerweb/clase 3/Navbar/inicio.html
+++ b/quispe_josue_tallerweb/clase 3/Navbar/inicio.html
@@ -23,6 +23,7 @@
 <p>El perro es un mamífero carnívoro de la familia de los cánidos, 
     que constituye una subespecie del lobo. Su tamaño o talla, su forma y su pelaje son diversos
      según la raza. Posee un oído y un olfato muy desarrollados. Este último es su principal órgano sensorial. </p>
+    <img src=¨perrito2.jfif¨>
     <h1> caracteristicas fisicas</h1>
 
     
