--- a/quispe_josue_tallerweb/clase 3/Navbar/inicio.html
+++ b/quispe_josue_tallerweb/clase 3/Navbar/inicio.html
@@ -26,7 +26,7 @@
     
     <h1> caracteristicas fisicas</h1>
     <p>
-       * Tamaño y forma: La variación en tamaño y forma es considerable entre las diferentes razas de perros. 
+       <p>* Tamaño y forma: La variación en tamaño y forma es considerable entre las diferentes razas de perros. </p>
 *Patas: Tienen patas largas y fuertes, adaptadas para la locomoción, que incluyen la mayoría de los mismos músculos, tendones, articulaciones y ligamentos que las personas. 
 *Hocico: Tienen un hocico alargado que se adapta a la actividad depredadora. 
 *Dientes: Sus dientes son afilados y grandes, diseñados para cazar, aguantar y desgarrar presas. 
