--- a/quispe_josue_tallerweb/clase 3/Navbar/inicio.html
+++ b/quispe_josue_tallerweb/clase 3/Navbar/inicio.html
@@ -27,19 +27,19 @@
     <h1> caracteristicas fisicas</h1>
     <p>
        <p>* Tamaño y forma: La variación en tamaño y forma es considerable entre las diferentes razas de perros. </p>
-*Patas: Tienen patas largas y fuertes, adaptadas para la locomoción, que incluyen la mayoría de los mismos músculos, tendones, articulaciones y ligamentos que las personas. 
-*Hocico: Tienen un hocico alargado que se adapta a la actividad depredadora. 
-*Dientes: Sus dientes son afilados y grandes, diseñados para cazar, aguantar y desgarrar presas. 
-*Sentidos: Tienen un olfato y oído muy desarrollados, siendo el olfato su principal órgano sensorial. 
-*Cola: La forma de la cola puede variar, desde recta hasta rizada o en tirabuzón. 
-*Pelaje: El pelaje también varía según la raza y el clima, con algunas razas que tienen una capa interna suave y vellosa para mayor aislamiento. 
-*Locomoción: Los perros pueden correr como caballos, usando los mismos cuatro pasos. 
-*Huesos: Tienen el mismo número de huesos (excepto la cola) que los humanos. 
-*Mandíbula: Tienen mandíbulas poderosas con alrededor de 42 dientes. 
-*Ojos: Los ojos de los perros no son excesivamente grandes. 
-*Cabeza: La cabeza está separada del cuerpo por un cuello fuerte. 
-*Orejas: Las orejas pueden ser erguidas o caídas, según la raza. 
-*Piel: La piel de los perros tiene una capa externa que se renueva periódicamente. 
+<p>*Patas: Tienen patas largas y fuertes, adaptadas para la locomoción, que incluyen la mayoría de los mismos músculos, tendones, articulaciones y ligamentos que las personas. </p>
+<p>*Hocico: Tienen un hocico alargado que se adapta a la actividad depredadora. </p> 
+<p>*Dientes: Sus dientes son afilados y grandes, diseñados para cazar, aguantar y desgarrar presas.  </p>
+<p>*Sentidos: Tienen un olfato y oído muy desarrollados, siendo el olfato su principal órgano sensorial.  </p>
+<p>*Cola: La forma de la cola puede variar, desde recta hasta rizada o en tirabuzón. </p> 
+<p>*Pelaje: El pelaje también varía según la raza y el clima, con algunas razas que tienen una capa interna suave y vellosa para mayor aislamiento.  </p>
+<p> *Locomoción: Los perros pueden correr como caballos, usando los mismos cuatro pasos. </p>
+<p> *Huesos: Tienen el mismo número de huesos (excepto la cola) que los humanos.</p> 
+<p>*Mandíbula: Tienen mandíbulas poderosas con alrededor de 42 dientes.  </p>
+<p>*Ojos: Los ojos de los perros no son excesivamente grandes.  </p>
+<p> *Cabeza: La cabeza está separada del cuerpo por un cuello fuerte. </p>
+<p>*Orejas: Las orejas pueden ser erguidas o caídas, según la raza.  </p>
+<p> *Piel: La piel de los perros tiene una capa externa que se renueva periódicamente.</p> 
     </p>
     
 
