--- a/quispe_josue_tallerweb/clase 3/Navbar/servicios.html
+++ b/quispe_josue_tallerweb/clase 3/Navbar/servicios.html
@@ -17,5 +17,20 @@
             <li><a href="contacto.html">contacto</a></li>
         </ul>
     </nav>
+    <h1> servicios para perro(tacna)</h1>
+    <p>Baño y corte:
+Muchos establecimientos ofrecen servicios de baño y corte para mascotas, como TotalPet o El Pet Shop, que incluyen productos suaves y seguros para la higiene y corte de pelo profesional. </p>
+    <p> Peluquería:
+Algunos establecimientos también ofrecen servicios de peluquería, como El Pet Shop, que incluye corte y limado de uñas, limpieza de glándulas y orejas, colonia y lazo. </p>
+    <h1> Servicios de cuidado y bienestar:</h1>
+    <p>Guardería canina:
+Las guarderías caninas son una alternativa a las pensiones, donde los perros reciben atención personalizada, juegos, actividad física y socialización con otros perros. Cuida Mi Mascota ofrece servicios de guardería y otros servicios para mascotas.  </p>
+    <p>Paseadores de perros:
+Los paseadores de perros ofrecen salidas y paseos para mantener a los perros activos y socializados. PaseaPerros.com es una plataforma que conecta a dueños de perros con paseadores. </p>
+    <h1>Servicios veterinarios </h1>
+    <p>Veterinaria Municipal:
+En Tacna, la Municipalidad Provincial de Tacna ofrece servicios veterinarios a la comunidad, incluyendo desparasitación, esterilización y tramitación de documentación canina.  </p>
+    <p> Clínica veterinaria:
+TotalPet ofrece servicios de baño y corte, así como atención veterinaria. </p>
 </body>
 </html>
